2003-10-08  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Document new FC Fortran macros.

2003-10-08  Gary V. Vaughan  <gary@gnu.org>

	* lib/autoconf/general.m4 (AC_CONFIG_MACRO_DIR): Stub out a macro
	that future autopoint/aclocal/automake/autoreconf will be able
	to trace to find where to install local m4 macros.
	* doc/autoconf.texi (Input): Document it.
	* NEWS: Updated.

2003-10-06  Gary V. Vaughan  <gary@gnu.org>

	* lib/autoconf/fortran.m4 (_AC_FC_LIBRARY_LDFLAGS): Add
	-lcrtbegin.o to list of ignored flags and fix underquoting of
	-lcrt[01].o.

2003-10-04  Steven G. Johnson  <stevenj@ab-initio.mit.edu>

	* lib/autoconf/fortran.m4 (_AC_PROG_FC_G): Use language-specific
	cache variable instead of $G77 to decide whether to include -O2,
	since $G77 is specific to Fortran 77.

2003-10-03  Steven G. Johnson  <stevenj@alum.mit.edu>

	* lib/autoconf/fortran.m4 (AC_FC_FREEFORM): Support Absoft "-f
	free" flag.  Re-order flags tested into rough order of popularity.

2003-10-03  Steven G. Johnson  <stevenj@alum.mit.edu>

	* lib/autoconf/fortran.m4 (AC_PROG_FC): Reverse the order of the
	arguments so that it can be used with syntax identical to
	AC_PROG_F77, and so that we can more easily decide to
	remove/deprecate the DIALECT optional argument in the future if it
	proves troublesome.
	(AC_FC_FREEFORM): Exit 77 upon failure to fix test suite for
	non-freeform-supporting compilers.  Document freeform flags.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* configure.ac: Look for emacs, not macs.
	Reported by Eric Sunshine.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* lib/autom4te.in (Autoreconf-preselections): Trace AC_CONFIG_AUX_DIR.
	* bin/autoreconf.in (autoreconf_current_directory): Create the
	AUX_DIR if needed, for sake of automake --add-missing etc.
	Suggested by Alexandre Duret-Lutz.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* configure.ac: Quotation and formatting changes.
	(EMACS): Don't set it if it is not recent enough to support